<resources>
    <string name="app_name">Atm Stored</string>
    <string name="title_activity_atms">Atms Stored</string>

    <string name="action_submit">Submit</string>
    <string name="action_add_new_atm">Add New Atm</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="message_no_atms">You have no Atms</string>
    <string name="title_activity_add_new_atm">Add New Atm</string>

    <string name="add_new_atm_name_hint">Name of the Atm</string>
    <string name="add_new_atm_address_hint">Address of the Atm</string>
    <string name="add_new_atm_latitude_hint">Latitude</string>
    <string name="add_new_atm_longitude_hint">Longitude</string>

    <string name="error_not_empty">Please fill here</string>
    <string name="title_activity_maps">Map</string>

    <string name="GPSAlertDialogTitle">GPS is setting</string>
    <string name="GPSAlertDialogMessage">GPS is not enabled. Do you want to go to setting menu</string>

    <string name="settings">Settings</string>
    <string name="cancel">Cancel</string>

    <string name="latitude">Latitude : </string>
    <string name="longitude">Longitude : </string>

    <string name="country">Country : </string>
    <string name="city">City : </string>
    <string name="postalCode">Postal Code : </string>
    <string name="addressLine">Address Line : </string>
    <string name="action_settings">Settings</string>

    <string name="access_fine_location_title">Access To Location</string>
    <string name="access_fine_location_message">We can not search the nearest Atm until you accept the permission</string>

    <string name="atm_no_result">There is no Atms within the radius of 20 kilometers</string>
    <string name="restart_app_to_get_correct_location">Please restart the application to get the correct location</string>
    <string name="no_atms_data_to_search">Please add at least Atm location before starting to search</string>
</resources>
