<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.sam_nguyen.atmstored.ui.add_new_atm.AddNewAtmFragment">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <include layout="@layout/toolbar" />
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/appBar">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="20dp">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <AutoCompleteTextView
                        android:id="@+id/ed_atm_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/add_new_atm_name_hint"
                        android:inputType="textCapSentences"
                        android:imeOptions="actionNext"
                        android:textSize="@dimen/atm_inputs"
                        android:maxLines="1" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <AutoCompleteTextView
                        android:id="@+id/ed_atm_address"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/add_new_atm_address_hint"
                        android:inputType="textCapSentences"
                        android:imeOptions="actionNext"
                        android:textSize="@dimen/atm_inputs"
                        android:maxLines="1" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <AutoCompleteTextView
                        android:id="@+id/ed_atm_latitude"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/add_new_atm_latitude_hint"
                        android:inputType="numberDecimal"
                        android:imeOptions="actionNext"
                        android:textSize="@dimen/atm_inputs"
                        android:maxLines="1" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <AutoCompleteTextView
                        android:id="@+id/ed_atm_longitude"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/add_new_atm_longitude_hint"
                        android:inputType="numberDecimal"
                        android:textSize="@dimen/atm_inputs"
                        android:imeActionId="@+id/submit"
                        android:imeActionLabel="@string/action_submit"
                        android:imeOptions="actionUnspecified"
                        android:maxLines="1" />

                </android.support.design.widget.TextInputLayout>

                <Button
                    android:text="@string/action_add_new_atm"
                    style="?android:textAppearanceSmall"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/bt_add_new_atm"
                    android:textColor="@color/white"
                    android:background="@drawable/add_new_atm_action_touch"
                    android:foreground="?selectableItemBackground"
                    android:layout_marginTop="30dp" />

            </LinearLayout>
        </ScrollView>
    </RelativeLayout>

</FrameLayout>
